@@ -130,6 +130,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 
 = 8.4.0 - xxxx-xx-xx =
 * Fix - Correctly setting the preferred card brand when creating and updating a payment intent.
+* Fix - Added a feedback message + redirection back to cart when a Cash App payment fails.
 * Tweak - Update WordPress.org screenshots and captions.
 * Fix - Remove the duplicated customization notice in the settings screen.
 * Add - Include Cash App as a payment method for stores using the updated checkout experience.
